package com.shellshellfish.aaas.common.grpc.trade.pay;

public class ApplyResult {
    private String identityno;
    private String tradeacco;
    private String fundacco;
    private String fundcode;
    private String fundname;
    private String callingcode;
    private String branchno;
    private String applyserial;
    private String sharetype;
    private String applydate;
    private String applytime;
    private String applyshare;
    private String applysum;
    private String balancecoin;
    private String targetfundcode;
    private String targetfundname;
    private String targetsharetype;
    private String oppfundcode;
    private String oppsaler;
    private String opptrusteebranch;
    private String mintredeem;
    private String commisiondiscount;
    private String melonmethod;
    private String freezemethod;
    private String originalapplyserial;
    private String confirmflag;
    private String confirmstat;
    private String confirmdate;
    private String capitalmode;
    private String comefrom;
    private String kkstat;
    private String enddiscount;
    private String otherdiscount;
    private String oriapplydate;
    private String trademethod;
    private String accepttime;
    private String riskmatch;
    private String bankacco;
    private String bankname;
    private String businflagStr;
    private String occurbankacco;
    private String bankSerial;
    private String outsideorderno;
    private String tradeconfirmshare;
    private String tradeconfirmsum;
    private String xyh;
    private String poundage;
    private String fixflag;

    public String getIdentityno() {
        return identityno;
    }

    public void setIdentityno(String identityno) {
        this.identityno = identityno;
    }

    public String getTradeacco() {
        return tradeacco;
    }

    public void setTradeacco(String tradeacco) {
        this.tradeacco = tradeacco;
    }

    public String getFundacco() {
        return fundacco;
    }

    public void setFundacco(String fundacco) {
        this.fundacco = fundacco;
    }

    public String getFundcode() {
        return fundcode;
    }

    public void setFundcode(String fundcode) {
        this.fundcode = fundcode;
    }

    public String getFundname() {
        return fundname;
    }

    public void setFundname(String fundname) {
        this.fundname = fundname;
    }

    public String getCallingcode() {
        return callingcode;
    }

    public void setCallingcode(String callingcode) {
        this.callingcode = callingcode;
    }

    public String getBranchno() {
        return branchno;
    }

    public void setBranchno(String branchno) {
        this.branchno = branchno;
    }

    public String getApplyserial() {
        return applyserial;
    }

    public void setApplyserial(String applyserial) {
        this.applyserial = applyserial;
    }

    public String getSharetype() {
        return sharetype;
    }

    public void setSharetype(String sharetype) {
        this.sharetype = sharetype;
    }

    public String getApplydate() {
        return applydate;
    }

    public void setApplydate(String applydate) {
        this.applydate = applydate;
    }

    public String getApplytime() {
        return applytime;
    }

    public void setApplytime(String applytime) {
        this.applytime = applytime;
    }

    public String getApplyshare() {
        return applyshare;
    }

    public void setApplyshare(String applyshare) {
        this.applyshare = applyshare;
    }

    public String getApplysum() {
        return applysum;
    }

    public void setApplysum(String applysum) {
        this.applysum = applysum;
    }

    public String getBalancecoin() {
        return balancecoin;
    }

    public void setBalancecoin(String balancecoin) {
        this.balancecoin = balancecoin;
    }

    public String getTargetfundcode() {
        return targetfundcode;
    }

    public void setTargetfundcode(String targetfundcode) {
        this.targetfundcode = targetfundcode;
    }

    public String getTargetfundname() {
        return targetfundname;
    }

    public void setTargetfundname(String targetfundname) {
        this.targetfundname = targetfundname;
    }

    public String getTargetsharetype() {
        return targetsharetype;
    }

    public void setTargetsharetype(String targetsharetype) {
        this.targetsharetype = targetsharetype;
    }

    public String getOppfundcode() {
        return oppfundcode;
    }

    public void setOppfundcode(String oppfundcode) {
        this.oppfundcode = oppfundcode;
    }

    public String getOppsaler() {
        return oppsaler;
    }

    public void setOppsaler(String oppsaler) {
        this.oppsaler = oppsaler;
    }

    public String getOpptrusteebranch() {
        return opptrusteebranch;
    }

    public void setOpptrusteebranch(String opptrusteebranch) {
        this.opptrusteebranch = opptrusteebranch;
    }

    public String getMintredeem() {
        return mintredeem;
    }

    public void setMintredeem(String mintredeem) {
        this.mintredeem = mintredeem;
    }

    public String getCommisiondiscount() {
        return commisiondiscount;
    }

    public void setCommisiondiscount(String commisiondiscount) {
        this.commisiondiscount = commisiondiscount;
    }

    public String getMelonmethod() {
        return melonmethod;
    }

    public void setMelonmethod(String melonmethod) {
        this.melonmethod = melonmethod;
    }

    public String getFreezemethod() {
        return freezemethod;
    }

    public void setFreezemethod(String freezemethod) {
        this.freezemethod = freezemethod;
    }

    public String getOriginalapplyserial() {
        return originalapplyserial;
    }

    public void setOriginalapplyserial(String originalapplyserial) {
        this.originalapplyserial = originalapplyserial;
    }

    public String getConfirmflag() {
        return confirmflag;
    }

    public void setConfirmflag(String confirmflag) {
        this.confirmflag = confirmflag;
    }

    public String getConfirmstat() {
        return confirmstat;
    }

    public void setConfirmstat(String confirmstat) {
        this.confirmstat = confirmstat;
    }

    public String getCapitalmode() {
        return capitalmode;
    }

    public void setCapitalmode(String capitalmode) {
        this.capitalmode = capitalmode;
    }

    public String getComefrom() {
        return comefrom;
    }

    public void setComefrom(String comefrom) {
        this.comefrom = comefrom;
    }

    public String getKkstat() {
        return kkstat;
    }

    public void setKkstat(String kkstat) {
        this.kkstat = kkstat;
    }

    public String getEnddiscount() {
        return enddiscount;
    }

    public void setEnddiscount(String enddiscount) {
        this.enddiscount = enddiscount;
    }

    public String getOtherdiscount() {
        return otherdiscount;
    }

    public void setOtherdiscount(String otherdiscount) {
        this.otherdiscount = otherdiscount;
    }

    public String getOriapplydate() {
        return oriapplydate;
    }

    public void setOriapplydate(String oriapplydate) {
        this.oriapplydate = oriapplydate;
    }

    public String getTrademethod() {
        return trademethod;
    }

    public void setTrademethod(String trademethod) {
        this.trademethod = trademethod;
    }

    public String getAccepttime() {
        return accepttime;
    }

    public void setAccepttime(String accepttime) {
        this.accepttime = accepttime;
    }

    public String getRiskmatch() {
        return riskmatch;
    }

    public void setRiskmatch(String riskmatch) {
        this.riskmatch = riskmatch;
    }

    public String getBankacco() {
        return bankacco;
    }

    public void setBankacco(String bankacco) {
        this.bankacco = bankacco;
    }

    public String getBankname() {
        return bankname;
    }

    public void setBankname(String bankname) {
        this.bankname = bankname;
    }

    public String getBusinflagStr() {
        return businflagStr;
    }

    public void setBusinflagStr(String businflagStr) {
        this.businflagStr = businflagStr;
    }

    public String getOccurbankacco() {
        return occurbankacco;
    }

    public void setOccurbankacco(String occurbankacco) {
        this.occurbankacco = occurbankacco;
    }

    public String getBankSerial() {
        return bankSerial;
    }

    public void setBankSerial(String bankSerial) {
        this.bankSerial = bankSerial;
    }

    public String getOutsideorderno() {
        return outsideorderno;
    }

    public void setOutsideorderno(String outsideorderno) {
        this.outsideorderno = outsideorderno;
    }

    public String getTradeconfirmshare() {
        return tradeconfirmshare;
    }

    public void setTradeconfirmshare(String tradeconfirmshare) {
        this.tradeconfirmshare = tradeconfirmshare;
    }

    public String getTradeconfirmsum() {
        return tradeconfirmsum;
    }

    public void setTradeconfirmsum(String tradeconfirmsum) {
        this.tradeconfirmsum = tradeconfirmsum;
    }

    public String getXyh() {
        return xyh;
    }

    public void setXyh(String xyh) {
        this.xyh = xyh;
    }

    public String getPoundage() {
        return poundage;
    }

    public void setPoundage(String poundage) {
        this.poundage = poundage;
    }

    public String getFixflag() {
        return fixflag;
    }

    public void setFixflag(String fixflag) {
        this.fixflag = fixflag;
    }

    public String getConfirmdate() {
        return confirmdate;
    }

    public void setConfirmdate(String confirmdate) {
        this.confirmdate = confirmdate;
    }
}
