package com.shellshellfish.aaas.common.grpc.zzapi;

import com.google.gson.annotations.SerializedName;

/**
 * Created by chenwei on 2018- 五月 - 16
 */

public class ZZAplyCfmInfo {
  @SerializedName("applydate")
  String applydate;
  @SerializedName("applyserial")
  String applyserial;
  @SerializedName("applyshare")
  String applyshare;
  @SerializedName("applysum")
  String applysum;
  @SerializedName("applytime")
  String applytime;
  @SerializedName("bankacco")
  String bankacco;
  @SerializedName("bankname")
  String bankname;
  @SerializedName("bankSerial")
  String bankSerial;
  @SerializedName("businflagStr")
  String businflagStr;
  @SerializedName("callingcode")
  String callingcode;
  @SerializedName("capitalmode")
  String capitalmode;
  @SerializedName("confirmdate")
  String confirmdate;
  @SerializedName("confirmflag")
  String confirmflag;
  @SerializedName("confirmstat")
  String confirmstat;
  @SerializedName("freezemethod")
  String freezemethod;
  @SerializedName("fundacco")
  String fundacco;
  @SerializedName("fundname")
  String fundname;
  @SerializedName("fundcode")
  String fundCode;
  @SerializedName("melonmethod")
  String melonmethod;
  @SerializedName("occurbankacco")
  String occurbankacco;
  @SerializedName("oriapplydate")
  String oriapplydate;
  @SerializedName("originalapplyserial")
  String originalapplyserial;
  @SerializedName("outsideorderno")
  String outsideorderno;
  @SerializedName("sharetype")
  String sharetype;
  @SerializedName("tradeacco")
  String tradeacco;
  @SerializedName("tradeconfirmshare")
  String tradeconfirmshare;
  @SerializedName("tradeconfirmsum")
  String tradeconfirmsum;
  @SerializedName("xyh")
  String xyh;

  public String getApplydate() {
    return applydate;
  }

  public void setApplydate(String applydate) {
    this.applydate = applydate;
  }

  public String getApplyserial() {
    return applyserial;
  }

  public void setApplyserial(String applyserial) {
    this.applyserial = applyserial;
  }

  public String getApplyshare() {
    return applyshare;
  }

  public void setApplyshare(String applyshare) {
    this.applyshare = applyshare;
  }

  public String getApplysum() {
    return applysum;
  }

  public void setApplysum(String applysum) {
    this.applysum = applysum;
  }

  public String getApplytime() {
    return applytime;
  }

  public void setApplytime(String applytime) {
    this.applytime = applytime;
  }

  public String getBankacco() {
    return bankacco;
  }

  public void setBankacco(String bankacco) {
    this.bankacco = bankacco;
  }

  public String getBankname() {
    return bankname;
  }

  public void setBankname(String bankname) {
    this.bankname = bankname;
  }

  public String getBankSerial() {
    return bankSerial;
  }

  public void setBankSerial(String bankSerial) {
    this.bankSerial = bankSerial;
  }

  public String getBusinflagStr() {
    return businflagStr;
  }

  public void setBusinflagStr(String businflagStr) {
    this.businflagStr = businflagStr;
  }

  public String getCallingcode() {
    return callingcode;
  }

  public void setCallingcode(String callingcode) {
    this.callingcode = callingcode;
  }

  public String getCapitalmode() {
    return capitalmode;
  }

  public void setCapitalmode(String capitalmode) {
    this.capitalmode = capitalmode;
  }

  public String getConfirmdate() {
    return confirmdate;
  }

  public void setConfirmdate(String confirmdate) {
    this.confirmdate = confirmdate;
  }

  public String getConfirmflag() {
    return confirmflag;
  }

  public void setConfirmflag(String confirmflag) {
    this.confirmflag = confirmflag;
  }

  public String getConfirmstat() {
    return confirmstat;
  }

  public void setConfirmstat(String confirmstat) {
    this.confirmstat = confirmstat;
  }

  public String getFreezemethod() {
    return freezemethod;
  }

  public void setFreezemethod(String freezemethod) {
    this.freezemethod = freezemethod;
  }

  public String getFundacco() {
    return fundacco;
  }

  public void setFundacco(String fundacco) {
    this.fundacco = fundacco;
  }

  public String getFundname() {
    return fundname;
  }

  public void setFundname(String fundname) {
    this.fundname = fundname;
  }

  public String getMelonmethod() {
    return melonmethod;
  }

  public void setMelonmethod(String melonmethod) {
    this.melonmethod = melonmethod;
  }

  public String getOccurbankacco() {
    return occurbankacco;
  }

  public void setOccurbankacco(String occurbankacco) {
    this.occurbankacco = occurbankacco;
  }

  public String getOriapplydate() {
    return oriapplydate;
  }

  public void setOriapplydate(String oriapplydate) {
    this.oriapplydate = oriapplydate;
  }

  public String getOriginalapplyserial() {
    return originalapplyserial;
  }

  public void setOriginalapplyserial(String originalapplyserial) {
    this.originalapplyserial = originalapplyserial;
  }

  public String getOutsideorderno() {
    return outsideorderno;
  }

  public void setOutsideorderno(String outsideorderno) {
    this.outsideorderno = outsideorderno;
  }

  public String getSharetype() {
    return sharetype;
  }

  public void setSharetype(String sharetype) {
    this.sharetype = sharetype;
  }

  public String getTradeacco() {
    return tradeacco;
  }

  public void setTradeacco(String tradeacco) {
    this.tradeacco = tradeacco;
  }

  public String getTradeconfirmshare() {
    return tradeconfirmshare;
  }

  public void setTradeconfirmshare(String tradeconfirmshare) {
    this.tradeconfirmshare = tradeconfirmshare;
  }

  public String getTradeconfirmsum() {
    return tradeconfirmsum;
  }

  public void setTradeconfirmsum(String tradeconfirmsum) {
    this.tradeconfirmsum = tradeconfirmsum;
  }

  public String getXyh() {
    return xyh;
  }

  public void setXyh(String xyh) {
    this.xyh = xyh;
  }

  public String getFundCode() {
    return fundCode;
  }

  public void setFundCode(String fundCode) {
    this.fundCode = fundCode;
  }
}
